--- a/src/styles/detailPage.css
+++ b/src/styles/detailPage.css
@@ -58,3 +58,32 @@
 .labelContainer{
     width: 50%;
 }
+.givenOfferContainer{
+    display: flex;
+    width: 225px;
+    background-color: #f2f2f2;
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+}
+.givenOfferTitle{
+    font: normal normal normal 15px/20px Nunito;
+    color: #B1B1B1;
+    opacity: 1;
+}
+.givenOfferPrice{
+    font: normal normal bold 15px/20px Nunito;
+    color: #525252;
+    opacity: 1;
+}
+.notOnSale{
+    background: #FFF0E2 0% 0% no-repeat padding-box;
+    border-radius: 8px;
+    opacity: 1;
+    font: normal normal bold 18px/24px Nunito;
+    color: #FAAD60;
+    width: 235px;
+    text-align: center;
+    padding: 10px 0px;
+    margin: 30px 0px;
+}
