fixed home page

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,6 +12,7 @@
     font: normal normal 600 18px/24px Nunito;
     color: #525252;
     opacity: 1;
+    margin-right: 1.1%;
 }
 .img{
     width: 100%;
