--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,7 +10,6 @@
 .categoryContainer div{
     text-align: center;
     font: normal normal 600 18px/24px Nunito;
-    color: #525252;
     opacity: 1;
     margin-right: 1.1%;
 }
@@ -20,4 +19,11 @@
 }
 .category{
     cursor: pointer;
+    color: #525252;
+}
+.selectedButton{
+    cursor: pointer;
+    color: #4B9CE2;
+    background-color: transparent;
+    border-bottom: 2px solid #4B9CE2;
 }
