--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -5,12 +5,14 @@
     display: flex;
     justify-content: space-around;
 }
-button{
+.btnGroup button{
     background: #F0F8FF 0% 0% no-repeat padding-box;
     border-radius: 8px;
     opacity: 1;
     font: normal normal bold 14px/14px Nunito;
     color: #4B9CE2;
+}
+button{
     border: none;
     padding: 0.5em;
     margin-left: 5px;
