--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-radius: 8px;
 }
 .logoContainer{
     display: flex;
@@ -54,6 +55,10 @@
     border-radius: 8px;
     opacity: 1;
     border: none;
+    padding: 2px 0px 2px 3px;
+}
+.loginInputBlock{
+ margin-top: 15px;
 }
 .loginForm button{
     width: 100%;
@@ -65,7 +70,7 @@
     color: #FFFFFF;
     opacity: 1;
     border: none;
-    padding: 2px auto;
+    padding: 2px 6px;
 }
 .inputBlock{
     display: flex;
@@ -92,6 +97,6 @@
     color: #B1B1B1;
     opacity: 1;
 }
-.inputBlock span{
+.loginInputBlock span{
     color: red;
 }
