--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-radius: 8px;
 }
 .logoContainer{
     display: flex;
@@ -54,24 +55,21 @@
     border-radius: 8px;
     opacity: 1;
     border: none;
+    margin-bottom: 15px;
+    padding: 2px 0px 2px 3px;
 }
 .registerForm button{
     width: 100%;
     height: 4.16vh;
-    background: #4B9CE2 0% 0% no-repeat padding-box;
+    background: #4B9CE2;
     border-radius: 8px;
     opacity: 1;
     font: normal normal bold 18px/24px Nunito;
     color: #FFFFFF;
     opacity: 1;
     border: none;
-    padding: 2px auto;
-}
-.inputBlock{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    margin-bottom: 15px;
+    padding:  2px 6px !important; 
+    margin: 0px;
 }
 .commonClass{
     text-align: center;
