--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Nunito:wght@400;700&display=swap');
 .App {
   text-align: center;
+  font-family: 'Nunito', sans-serif;
 }
 
