--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,11 +5,14 @@
 .categoryContainer{
     display: flex;
     justify-content: space-between;
-    margin: 10px 0px;
+    margin: 20px 0px;
+    padding-bottom: 10px;
+    border-bottom: 3px groove #f2f2f2;
+    
 }
 .categoryContainer div{
     text-align: center;
-    font: normal normal 600 18px/24px Nunito;
+    font: normal normal 600 17px/24px Nunito;
     opacity: 1;
     margin-right: 1.1%;
 }
