--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -100,3 +100,14 @@
 .loginInputBlock span{
     color: red;
 }
+@media only screen and (max-width:699px){
+    .loginContainer img{
+     display:none !important;
+    }
+    .loginForm{
+        padding: 20px 30px 20px 30px;
+    }
+    .loginFormContainer{
+        width: 100%;
+    }
+}
